--- a/openhpi/trunk/docs/man/hpiel.pod.1
+++ b/openhpi/trunk/docs/man/hpiel.pod.1
@@ -4,8 +4,9 @@ hpiel - An openhpi sample application that displays HPI event log entries.
 
 =head1 SYNOPSIS 
 
- hpiel [-D nn] [-d] [-e entitypath] [-c -p -r -X -h ]
- hpiel [--Domain=nn] [--del] [--entitypath="entitypath"] [--clear --resource --rdr --xml --debug --help]
+ hpiel [-D nn] [-N host[:port]] [-C <cfgfile>] [-d] [-e entitypath] [-c -p -r -X -h ]
+ hpiel [--Domain=nn]  [--host=host[:port]] [--cfgfile=file] 
+       [--del] [--entitypath="entitypath"] [--clear --resource --rdr --xml --debug --help]
 
 =head1 DESCRIPTION
 
@@ -18,7 +19,10 @@ If no domain is selected, hpiel uses a session with the default domain. The sele
 
 =over 2
 
+Help Options:
   -h, --help                    Show help options
+
+Application Options:
   -d, --del                     Display domain event log entries
   -c, --clear                   Clear log before reading event log entries
   -p, --resource                Pull resource info along with log entry
@@ -27,6 +31,8 @@ If no domain is selected, hpiel uses a session with the default domain. The sele
   -X, --debug                   Display debug messages
   -E, --entity-path="epath"     Use entity path epath and display resource
                                 event log entries.
+  -N, --host="host<:port>"      Connect to daemon host:port
+  -C, --cfgfile="file"          Use passed file as client configuration file
 
 If neither -d or -E "<arg>" are specified, event log entries will be shown
 for all supporting resources by default.
