--- a/openhpi/trunk/docs/man/hpifan.pod.1
+++ b/openhpi/trunk/docs/man/hpifan.pod.1
@@ -4,8 +4,8 @@ hpifan - An openhpi sample application that shows "Fan Control" management instr
 
 =head1 SYNOPSIS 
 
- hpifan [-D nn] [-h] [-s auto|nn] [-X]
- hpifan [--domain=nn] [--help] [--speed=auto|nn] [--debug]
+ hpifan [-D nn] [-N host[:port]] [-C <cfgfile>] [-h] [-s auto|nn] [-X]
+ hpifan [--domain=nn] [--host=host[:port]] [--cfgfile=file] [--help] [--speed=auto|nn] [--debug]
 
 =head1 DESCRIPTION
 
@@ -18,11 +18,17 @@ If no domain is selected, hpifan uses a session to the default domain. The selec
 
 =over 2
 
-  -h, --help              Show help options
-  -s, --speed=auto|nn     Set fan speed for ALL fans in domain
-                          (Speed is a number or "auto" for setting fan in auto mode)
-  -D, --domain=nn         Select domain id nn
-  -X, --debug             Display debug messages
+Help Options:
+  -h, --help                   Show help options
+
+Application Options:
+  -s, --speed=auto|nn          Set fan speed for ALL fans in domain
+                      speed is a number or "auto" for setting fan in auto mode
+  -D, --domain=nn              Select domain id nn
+  -X, --debug                  Display debug messages
+  -N, --host="host<:port>"     Connect to daemon host:port
+  -C, --cfgfile="file"         Use passed file as client configuration file
+
 
 =back
 
