--- a/openhpi/trunk/docs/man/hpisettime.pod.1
+++ b/openhpi/trunk/docs/man/hpisettime.pod.1
@@ -4,8 +4,8 @@ hpisettime - This sample openhpi application excercises Event Log clock APIs.
 
 =head1 SYNOPSIS 
 
- hpisettime [-D nn] -d mm/dd/yyyy -t HH:MM:SS [-X] [-h]
- hpisettime [--domain=nn] --date=mm/dd/yyyy --time=HH:MM:SS [--debug] [--help]
+ hpisettime [-D nn] [-N host[:port]] [-C <cfgfile>] -d mm/dd/yyyy -t HH:MM:SS [-X] [-h]
+ hpisettime [--domain=nn] [--host=host[:port]] [--cfgfile=file] --date=mm/dd/yyyy --time=HH:MM:SS [--debug] [--help]
 
 =head1 DESCRIPTION
 
@@ -17,11 +17,17 @@ If no domain is selected, hpisettime uses a session with the default domain. The
 
 =over 2
 
-  -h, --help                Show help options
-  -d, --date=mm/dd/yyyy     New date
-  -t, --time=24:12:60       New time of day in 24-hr format
-  -D, --domain=nn           Select domain id nn
-  -X, --debug               Display debug messages
+Help Options:
+  -h, --help                   Show help options
+
+Application Options:
+  -d, --date=mm/dd/yyyy        New date
+  -t, --time=24:12:60          New time of day in 24-hr format
+  -D, --domain=nn              Select domain id nn
+  -X, --debug                  Display debug messages
+  -N, --host="host<:port>"     Connect to daemon host:port
+  -C, --cfgfile="file"         Use passed file as client configuration file
+
 
 =back
 
@@ -31,7 +37,7 @@ If no domain is selected, hpisettime uses a session with the default domain. The
          hpialarms      hpifan         hpipower       hpitop
          hpidomain      hpigensimdata  hpireset       hpitree
          hpiel          hpiiinv        hpisensor      hpiwdt
-         hpievents      hpionIBMblade  hpithres
+         hpievents      hpionIBMblade  hpithres       hpixml
          ohdomainlist   ohhandler      ohparam
 
 
