--- a/openhpi/trunk/docs/man/ohdomainlist.pod.1
+++ b/openhpi/trunk/docs/man/ohdomainlist.pod.1
@@ -25,7 +25,11 @@ API are valid only for the life-time of the client library.
 =over 2
 
  (No Option) Display domain info
+
+Help Options:
   -h, --help        Show help options
+
+Application Options:
   -X, --debug       Display debug messages
   -V, --verbose     Verbose mode
 
