--- a/openhpi/trunk/docs/man/hpievents.pod.1
+++ b/openhpi/trunk/docs/man/hpievents.pod.1
@@ -4,8 +4,9 @@ hpievents - An openhpi sample application that polls for events.
 
 =head1 SYNOPSIS 
 
- hpievents [ -D <value> ] [ -t BLOCK|SAHPI_TIMEOUT_BLOCK|n ] [ -d -X -h ]
- hpievents [--domain=nn] [--timeout=BLOCK|SAHPI_TIMEOUT_BLOCK|n ] [--discover] [--debug] [--help]
+ hpievents [ -D <value> ] [-N host[:port]] [-C <cfgfile>] [ -t BLOCK|SAHPI_TIMEOUT_BLOCK|n ] [ -d -X -h ]
+ hpievents [--domain=nn] [--host=host[:port]] [--cfgfile=file]
+           [--timeout=BLOCK|SAHPI_TIMEOUT_BLOCK|n ] [--discover] [--debug] [--help]
 
 =head1 DESCRIPTION
 
@@ -18,11 +19,16 @@ If no domain is selected, hpievents polls for events in the default domain. The 
 
 =over 2
  
+Help Options:
   -h, --help                                    Show help options
+
+Application Options:
   -t, --timeout=n|BLOCK|SAHPI_TIMEOUT_BLOCK     Wait n seconds for event or infinite wait
   -d, --discover                                Call saHpiDiscover() after saHpiSubscribe()
   -D, --domain=nn                               Select domain id nn
   -X, --debug                                   Display debug messages
+  -N, --host="host<:port>"                      Connect to daemon host:port
+  -C, --cfgfile="file"                          Use passed file as client configuration file
 
 =back
 
