--- a/openhpi/trunk/docs/man/hpiinv.pod.1
+++ b/openhpi/trunk/docs/man/hpiinv.pod.1
@@ -4,8 +4,8 @@ hpiinv - An openhpi sample application that shows resources' inventory records.
 
 =head1 SYNOPSIS 
 
- hpiinv [-D nn] [-V] [ -X] [-a tag] [-h]
- hpiinv [--domain=nn] [--verbose] [--debug] [--asset-tag=tag] [--help]
+ hpiinv [-D nn] [-N host[:port]] [-C <cfgfile>] [-V] [ -X] [-a tag] [-h]
+ hpiinv [--domain=nn] [--host=host[:port]] [--cfgfile=file] [--verbose] [--debug] [--asset-tag=tag] [--help]
 
 =head1 DESCRIPTION
 
@@ -17,11 +17,16 @@ If no domain is selected, hpiinv uses a session with the default domain. The sel
 
 =over 2
 
-  -h, --help              Show help options
-  -a, --asset-tag=tag     Set the asset tag to the specified string
-  -D, --domain=nn         Select domain id nn
-  -X, --debug             Display debug messages
-  -V, --verbose           Verbose mode
+Help Options:
+  -h, --help                   Show help options
+
+Application Options:
+  -a, --asset-tag=tag          Set the asset tag to the specified string
+  -D, --domain=nn              Select domain id nn
+  -X, --debug                  Display debug messages
+  -V, --verbose                Verbose mode
+  -N, --host="host<:port>"     Connect to daemon host:port
+  -C, --cfgfile="file"         Use passed file as client configuration file
 
 =back
 
