--- a/openhpi/trunk/docs/man/hpionIBMblade.pod.1
+++ b/openhpi/trunk/docs/man/hpionIBMblade.pod.1
@@ -4,8 +4,8 @@ hpionIBMblade - An openhpi sample application that shows how two (2) openhpi plu
 
 =head1 SYNOPSIS 
 
- hpionIBMblade [-D nn] [ -X ] [ -h ]
- hpionIBMblade [--domain nn] [--debug] [--help]
+ hpionIBMblade [-D nn] [-N host[:port]] [-C <cfgfile>] [ -X ] [ -h ]
+ hpionIBMblade [--domain nn] [--host=host[:port]] [--cfgfile=file] [--debug] [--help]
 
 
 =head1 DESCRIPTION
@@ -25,9 +25,15 @@ Management Controller (BMC)
 
 =over 2
 
-  -h, --help          Show help options
-  -D, --domain=nn     Select domain id nn
-  -X, --debug         Display debug messages
+Help Options:
+  -h, --help                   Show help options
+
+Application Options:
+  -D, --domain=nn              Select domain id nn
+  -X, --debug                  Display debug messages
+  -N, --host="host<:port>"     Connect to daemon host:port
+  -C, --cfgfile="file"         Use passed file as client configuration file
+
 
 =back
 
