--- a/openhpi/trunk/docs/man/ohparam.pod.1
+++ b/openhpi/trunk/docs/man/ohparam.pod.1
@@ -4,10 +4,10 @@ ohparam - An openhpi sample application that uses the openhpi additional interfa
 
 =head1 SYNOPSIS 
 
- ohparam [-D nn] [-X] get
- ohparam [-D nn] [-X] set <paramname newvalue>
- ohparam [--domain nn] [--debug] get
- ohparam [--domain nn] [--debug] set <paramname newvalue>
+ ohparam [-D nn] [-N host[:port]] [-C <cfgfile>] [-X] get
+ ohparam [-D nn] [-N host[:port]] [-C <cfgfile>] [-X] set <paramname newvalue>
+ ohparam [--domain nn] [--host=host[:port]] [--cfgfile=file] [--debug] get
+ ohparam [--domain nn] [--host=host[:port]] [--cfgfile=file] [--debug] set <paramname newvalue>
 
 =head1 DESCRIPTION
 
@@ -40,9 +40,15 @@ If no domain is selected, ohparam uses the default domain. The selected domain i
 
 =over 2
 
-  -h, --help          Show help options
-  -D, --domain=nn     Select domain id nn
-  -X, --debug         Display debug messages
+Help Options:
+  -h, --help                   Show help options
+
+Application Options:
+  -D, --domain=nn              Select domain id nn
+  -X, --debug                  Display debug messages
+  -N, --host="host<:port>"     Connect to daemon host:port
+  -C, --cfgfile="file"         Use passed file as client configuration file
+
 
 =back
 
